--- a/policies/daily/r-ebs-snapshots-create-encrypted.yml
+++ b/policies/daily/r-ebs-snapshots-create-encrypted.yml
@@ -1,6 +1,6 @@
 policies:
   - name: copy-tags-volume-to-ebs-snapshots
-    description: copy tags volume to ebs snapshots
+    description: "Account {account_id} - copy tags volume to ebs snapshots"
     resource:  ebs-snapshot
     filters:
         - Encrypted: false 
